fix landscape view , add form colors in dark mode

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -2,7 +2,7 @@
 
 .about {
   width: 100%;
-  height: calc(100vh - 100px);
+  min-height: calc(100vh - 100px);
   display: flex;
   align-items: center;
   justify-content: center;
