--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -2,7 +2,7 @@
 
 .contact {
   width: 100%;
-  height: calc(100vh - 180px);
+  min-height: calc(100vh - 180px);
   background-color: $lightColor;
   display: flex;
   align-items: center;
@@ -27,24 +27,24 @@
 
     .container {
       width: 70%;
-      height: 85%;
+      min-height: 70vh;
       padding: 20px;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
       background-color: white;
-      box-shadow: 0px 0px 15px 3px $borderColor;
 
       @include tablet {
         width: 90%;
+        min-height: 75vh;
         padding: 0;
       }
 
       @include mobile {
         width: 100%;
+        max-height: 100vh;
         box-shadow: none;
-        // padding: 20px;
       }
 
       .top {
@@ -194,6 +194,7 @@
               }
 
               &::placeholder {
+                font-size: 15px;
                 text-transform: uppercase;
 
                 @include mobile {
@@ -231,7 +232,7 @@
 
   .right {
     width: 100%;
-    height: 100%;
+    max-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -277,18 +278,19 @@
     }
 
     .mapContainer {
-      width: 70%;
-      height: 90%;
-      box-shadow: 0px 0px 15px 3px $borderColor;
+      width: 75%;
+      max-height: 100vh;
+      display: flex;
+      align-items: center;
 
       @include tablet {
         width: 90%;
-        height: 85%;
+        max-height: 80vh;
       }
 
       @include mobile {
         width: 100%;
-        height: 40vh;
+        min-height: 70vh;
         box-shadow: none;
       }
     }
@@ -296,9 +298,13 @@
 
   .leaflet-container {
     width: 100%;
-    height: 100%;
+    min-height: 75vh;
 
     position: relative;
     z-index: 2;
   }
+
+  // @include mobile {
+  //   min-height: 100vh;
+  // }
 }
