--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -1,7 +1,7 @@
 @import '../../global.scss';
 
 .gallery {
-  height: calc(100vh - 100px);
+  min-height: calc(100vh - 100px);
   background-color: white;
   display: flex;
   align-items: center;
