--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -1,7 +1,7 @@
 @import '../../global.scss';
 
 .list {
-  height: calc(100vh - 150px);
+  min-height: calc(100vh - 150px);
   background-color: white;
   display: flex;
   flex-direction: column;
